<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reunion_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDADA"
    android:orientation="vertical">

    <!-- A RecyclerView with some commonly used attributes -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="goToAddMeeting"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:elevation="10dp"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add" />


</RelativeLayout>