<resources>
    <string name="app_name">Maréu</string>
    <string name="confirm_delete">Voulez-vous vraiment supprimer cette réunion ?</string>
    <string name="toast_delete">Réunion supprimée !</string>
    <string name="toast_add">Réunion enregistrée !</string>
    <string name="emailErreur">Adresse email incorrecte</string>
    <string name="title">%1$s - %2$s - %3$s</string>
    <string name="appTitle">Ma réu</string>
    <string name="email_supprimé">Email supprimé</string>
    <string name="message_subject_field_require">Veuillez saisir un sujet</string>
    <string name="test_subject_input">New meeting added</string>
    <string name="test_text_meeting_added">Réunion A - 7h00 - New meeting added</string>
    <string name="test_input_date">29/7/2020</string>
    <string name="test_subject_input2">Réunion J - 11h00 - Sujet 2</string>
    <string name="save_button">Enregistrer</string>
    <string name="ajouter_un_sujet">Ajouter un sujet</string>
    <string name="entrez_une_adresse_email">Entrez une adresse email</string>
    <string name="enter_date">Entrez une date</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="menu_filter">menu_filter</string>
    <string name="date_filter">Filtrer par date</string>
    <string name="room_filter">Filtrer par salle</string>
    <string name="date">%1$s / %2$s / %3$s à %4$sh%5$s</string>

    <string-array name="liste_salles">
        <item>Réunion A</item>
        <item>Réunion B</item>
        <item>Réunion C</item>
        <item>Réunion D</item>
        <item>Réunion E</item>
        <item>Réunion F</item>
        <item>Réunion G</item>
        <item>Réunion H</item>
        <item>Réunion I</item>
        <item>Réunion J</item>
    </string-array>

    <string-array name="horaires">
        <item>7h00</item>
        <item>8h00</item>
        <item>9h00</item>
        <item>10h00</item>
        <item>11h00</item>
        <item>12h00</item>
        <item>13h00</item>
        <item>14h00</item>
        <item>15h00</item>
        <item>16h00</item>
        <item>17h00</item>
        <item>18h00</item>
        <item>19h00</item>
    </string-array>

</resources>
