<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/delete_filter"
...
